# SrIntercept

./: .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: build.yml
CMake/: Dependencies.cmake
Source/Injector/: CMakeLists.txt
Source/Injector/Source/: Main.cpp
Source/Intercept/: CMakeLists.txt
Source/Intercept/Source/: ClientMessaging.cpp  ClientMessaging.hpp  HookUtils.hpp  InterceptLog.hpp  Main.cpp  RenderContext.cpp  RenderContext.hpp
Source/Manager/: CMakeLists.txt
Source/Manager/Source/: App.cpp  App.hpp  Blit.hlsli  Blit_ps.hlsl  Convert.hlsli  Convert_ps.hlsl  Convert_vs.hlsl  HostMessaging.cpp  HostMessaging.hpp  Main.cpp  Quad.hlsli  Quad_vs.hlsl  RenderContextProxy.cpp  RenderContextProxy.hpp  Renderer.cpp  Renderer.hpp
Source/Shared/: CMakeLists.txt
Source/Shared/Source/: ConnectionMessaging.cpp  ConnectionMessaging.hpp  ConnectionStream.cpp  ConnectionStream.hpp  Log.cpp  Log.hpp  Packets.hpp
Source/TestApp/: CMakeLists.txt
Source/TestApp/Source/: Cube.hlsli  Cube_ps.hlsl  Cube_vs.hlsl  Main.cpp
